--- a/force-app/main/default/classes/CPQDepositAccessor.cls
+++ b/force-app/main/default/classes/CPQDepositAccessor.cls
@@ -5,7 +5,11 @@ public class CPQDepositAccessor {
 
 
     public boolean isXMLEntryValid(Deposit__c currDeposit, String entryCode){
-        if ( currDeposit.Bank_Country_Raw__c == 'US' && (entryCode == '166' || entryCode == '115') ){
+        if ( currDeposit.Deposit_Type__c == 'dbit') {
+            isValid = false;
+            return isValid;
+        }
+        else if ( currDeposit.Bank_Country_Raw__c == 'US' && (entryCode == '166' || entryCode == '115') ){
             System.debug('\nINVALID US ENTRY: the current bank country is ' + currDeposit.Bank_Country_Raw__c + ' and BAI code is ' + entryCode);
             isValid = false;
             return isValid;
