--- a/force-app/main/default/classes/CPQCamt053XMLParser.cls
+++ b/force-app/main/default/classes/CPQCamt053XMLParser.cls
@@ -37,7 +37,11 @@ public class CPQCamt053XMLParser
                     when 'cdtdbtind'{
                         if (XMLState.isWithinLevel(NTRY)){
                             String depositType = parser.parseFromStream(reader, false);
-                            currDeposit.Deposit_Type__c = depositType;
+                            currDeposit.Deposit_Type__c = depositType.toLowerCase();
+                            if (depositValidator.isXMLEntryValid(currDeposit, '000') == false){
+                                parser.skipToNextNtry(reader, XMLState);
+                                XMLState.leaveLevel(NTRY);
+                            }
                         }
                     }
                     when 'credttm'{
@@ -103,7 +107,7 @@ public class CPQCamt053XMLParser
                             String BAIcode = parser.parseFromStream(reader, false);
                             currDeposit.BAI_Code__c = BAIcode;
                             if (depositValidator.isXMLEntryValid(currDeposit, BAIcode) == false){
-                                parser.skipToNextNtry(reader);
+                                parser.skipToNextNtry(reader, XMLState);
                                 XMLState.leaveLevel(NTRY);
                             }
                         }
