--- a/force-app/main/default/classes/CPQCamt054XMLParser.cls
+++ b/force-app/main/default/classes/CPQCamt054XMLParser.cls
@@ -24,6 +24,7 @@ public class CPQCamt054XMLParser
         currDeposit.clear();
         currDeposit.Bank_Batch_Reference__c = payloadToParse.Name;
         currDeposit.Status__c = 'Open';
+        currDeposit.File_Type__c = 'XML';
         //salesforce doesn't support final vars in switch statements --https://success.salesforce.com/ideaView?id=0873A000000lLkNQAU
 
         while (reader.hasNext()) {
